--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/5f59ca6ad3.js" crossorigin="anonymous"></script>
 </head>
-<link rel ="stylesheet" href="style.css">
+<link rel ="stylesheet" href="index.css">
 <body>
     <div class="p-2">
         <h1 class="text-center chatbot-heading">Meet our Chatbot</h1>
@@ -24,5 +24,5 @@
         </div>
     </div>
 </body>
-<script src = "chatbot.js"></script>
+<script src = "index.js"></script>
 </html>
